--- a/pom.xml
+++ b/pom.xml
@@ -22,7 +22,8 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <java.version>1.8</java.version>
-        <xmlunit.version>2.6.3</xmlunit.version>
+        <xmlunit.version>2.6.4</xmlunit.version>
+        <assertj-core.version>3.13.2</assertj-core.version>
     </properties>
 
     <dependencies>
@@ -45,7 +46,7 @@
         <dependency>
             <groupId>org.assertj</groupId>
             <artifactId>assertj-core</artifactId>
-            <version>3.11.0</version>
+            <version>${assertj-core.version}</version>
         </dependency>
         <dependency>
             <groupId>org.xmlunit</groupId>
